--- a/src/_styles/_post.scss
+++ b/src/_styles/_post.scss
@@ -2,6 +2,7 @@ code {
 	background: var(--secondary-bg);
 	padding: 0.25em;
 	border-radius: 5px;
+	word-break: break-all;
 }
 
 pre {
